# sof

./: CMakeLists.txt  LICENSE  sof.sconstruct  sof_remote.sconstruct  todo.txt
console/: CMakeLists.txt  sof_console.sconscript  sof_console.vcproj
console/src/: sof_console.cpp
doc/doxygen/: Doxyfile  Doxyfile_remote
examples/: CMakeLists.txt  sof_examples.sconscript  sof_examples.vcproj
examples/bundle1/: CMakeLists.txt  sof_examples_bundle1.sconscript  sof_examples_bundle1.vcproj
examples/bundle1/src/: BundleActivator1.cpp  BundleActivator1.h  IMultiplierImpl.h  dll.cpp
examples/bundle2/: CMakeLists.txt  sof_examples_bundle2.sconscript  sof_examples_bundle2.vcproj
examples/bundle2/src/: BundleActivator2.cpp  BundleActivator2.h
examples/common/src/: IMultiplier.h
examples/src/: sof_examples.cpp
impl/: CMakeLists.txt  sof.sconscript  sof.sln  sof.vcproj
impl/src/sof/config/: BundleConfiguration.cpp  BundleConfiguration.h  ConfigFileReader.cpp  ConfigFileReader.h  ConfigurationException.cpp  ConfigurationException.h
impl/src/sof/framework/: BundleInfo.cpp  BundleInfo.h  BundleInfoBase.cpp  BundleInfoBase.h  IBundleActivator.h  IBundleContext.h  IBundleContextImpl.cpp  IBundleContextImpl.h  IRegistry.h  IRegistryImpl.cpp  IRegistryImpl.h  IService.h  IServiceListener.h  IServiceRegistration.h  IServiceRegistrationImpl.cpp  IServiceRegistrationImpl.h  IServiceTrackerCustomizer.h  Launcher.cpp  Launcher.h  Properties.cpp  Properties.h  SOFException.cpp  SOFException.h  ServiceEvent.cpp  ServiceEvent.h  ServiceInfo.cpp  ServiceInfo.h  ServiceListenerInfo.cpp  ServiceListenerInfo.h  ServiceReference.cpp  ServiceReference.h  ServiceTracker.cpp  ServiceTracker.h
impl/src/sof/instantiation/: BaseFactory.h  Factory.h  NullCreator.h  ObjectCreationException.cpp  ObjectCreationException.h  ObjectCreator.h
impl/src/sof/instantiation/unix/: SharedLibLoader.h
impl/src/sof/instantiation/win/: WinDllCreator.h
impl/src/sof/services/admin/: AdministrationActivator.cpp  AdministrationActivator.h  ConsoleCommand.h  DumpAllBundlesCmd.cpp  DumpAllBundlesCmd.h  DumpBundleInfoCmd.cpp  DumpBundleInfoCmd.h  IAdministrationProvider.h  IAdministrationService.h  IAdministrationServiceImpl.cpp  IAdministrationServiceImpl.h  StartBundleCmd.cpp  StartBundleCmd.h  StartBundleFromDLLCmd.cpp  StartBundleFromDLLCmd.h  StartBundlesFromFileCmd.cpp  StartBundlesFromFileCmd.h  StopAllBundlesCmd.cpp  StopAllBundlesCmd.h  StopBundleCmd.cpp  StopBundleCmd.h
impl/src/sof/util/helper/: StringTokenizer.cpp  StringTokenizer.h
impl/src/sof/util/logging/: Logger.h  LoggerFactory.cpp  LoggerFactory.h  LoggerImpl.cpp  LoggerImpl.h
impl/src/sof/util/memory/: ScopeGuard.h  SmartPtr.h
impl/src/sof/util/threading/: SingleThreaded.h
remote/console/: CMakeLists.txt  sof_remote_console.sconscript  sof_remote_console.vcproj
remote/console/src/: sof_remote_console.cpp
remote/examples/bundle1/: CMakeLists.txt  sof_remote_examples_bundle1.sconscript  sof_remote_examples_bundle1.vcproj
remote/examples/bundle1/src/: BundleActivator1.cpp  BundleActivator1.h  MultiplierImpl.h  dll.cpp
remote/impl/: CMakeLists.txt  sof_remote.sconscript  sof_remote.sln  sof_remote.vcproj
remote/impl/src/sof/framework/remote/corba/: CORBAHelper.cpp  CORBAHelper.h  ILocalServiceTrackerCustomizer.h  IRemoteBundleActivator.h  IRemoteBundleContext.h  IRemoteBundleContextImpl.cpp  IRemoteBundleContextImpl.h  IRemoteServiceTrackerCustomizer.h  LocalServiceTracker.cpp  LocalServiceTracker.h  RemoteBundleInfo.cpp  RemoteBundleInfo.h  RemoteSOFLauncher.cpp  RemoteSOFLauncher.h  RemoteServiceEvent.cpp  RemoteServiceEvent.h  RemoteServiceInfo.cpp  RemoteServiceInfo.h  RemoteServiceListenerInfo.cpp  RemoteServiceListenerInfo.h  RemoteServiceReference.cpp  RemoteServiceReference.h  RemoteServiceTracker.cpp  RemoteServiceTracker.h
remote/impl/src/sof/framework/remote/corba/namingservice/: CORBANamingService.h  CORBANamingServiceFactory.cpp  CORBANamingServiceFactory.h  CORBANamingServiceImpl.cpp  CORBANamingServiceImpl.h
remote/impl/src/sof/framework/remote/corba/registry/: CORBARegistryImpl.cpp  CORBARegistryImpl.h  CORBARegistryObserverImpl.cpp  CORBARegistryObserverImpl.h  IRegistryFacadeImpl.cpp  IRegistryFacadeImpl.h  IRemoteRegistryImpl.cpp  IRemoteRegistryImpl.h
remote/impl/src/sof/services/admin/remote/: RemoteAdministrationActivator.cpp  RemoteAdministrationActivator.h
remote/impl/src/sof/services/admin/remote/corba/: CORBAAdminServiceImpl.cpp  CORBAAdminServiceImpl.h  DataConverter.cpp  DataConverter.h
remote/registry/: CMakeLists.txt  registry.sconscript  sof_remote_registry.vcproj
remote/registry/src/: registry.cpp
remote/test/: CMakeLists.txt  sof_remote_test.sconscript  sof_remote_test.vcproj
remote/test/idl/: Multiplier.idl  gen_multiplier.bat
remote/test/src/: BundleActivator1.cpp  BundleActivator1.h  BundleActivator2.cpp  BundleActivator2.h  CustomizedCORBAHelper.cpp  CustomizedCORBAHelper.h  IDivider.h  IDividerImpl.cpp  Multiplier.cpp  MultiplierImpl.cpp  MultiplierImpl.h  RemoteSOFLauncherTest.cpp  UnitTestLogger.cpp  UnitTestLogger.h  sof_remote_test.cpp
test/: CMakeLists.txt  sof_test.sconscript  sof_test.vcproj
test/TestDll1/: CMakeLists.txt  TestDll1.vcproj  sof_test_dll1.sconscript
test/TestDll1/src/: ITestImpl.cpp  ITestImpl.h  ITestImpl2.cpp  ITestImpl2.h  dll_test.cpp
test/TestDll2/: CMakeLists.txt  TestDll2.vcproj  sof_test_dll2.sconscript
test/TestDll2/src/: BundleActivator2.cpp  BundleActivator2.h  IServiceAImpl.cpp  IServiceAImpl.h  dll_test.cpp
test/config/: config_file_reader_test.sof
test/src/: BaseTestClass.cpp  BaseTestClass.h  ConfigFileReaderTest.cpp  IServiceA.h  IServiceB.h  IServiceBImpl.cpp  IServiceBImpl.h  ITest.h  ITestImpl.cpp  ITestImpl.h  LauncherTest.cpp  ObjectCreatorTest.cpp  ServiceListenerNotificationErrorTest.cpp  ServiceListenerNotificationTest.cpp  ServiceListenerRegistrationTest.cpp  TestBundleActivator.cpp  TestBundleActivator.h  TestClass.cpp  TestClass.h  TestHelper.cpp  TestHelper.h  ThreadingTest.cpp  UnitTestLogger.h  osgi_sof_test.cpp
(+91 files in other folders)
