PROJECT (SOF_REMOTE_CONSOLE)

SET (SOURCES 
	src/sof_remote_console.cpp
	)
    
GET_PROPERTY( MICO_INCLUDE_DIR GLOBAL PROPERTY MICO_INCLUDE )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/impl/src ${CMAKE_SOURCE_DIR}/remote/impl/src ${MICO_INCLUDE_DIR} )

GET_PROPERTY( MICO_LIBRARY_PATH GLOBAL PROPERTY MICO_LIBS )
GET_PROPERTY( MICO_ORB_LIB GLOBAL PROPERTY MICO_ORB )
GET_PROPERTY( MICO_COSS_LIB GLOBAL PROPERTY MICO_COSS )
GET_PROPERTY( MICO_PTHREAD_LIB GLOBAL PROPERTY MICO_PTHREAD )
GET_PROPERTY( CONSOLE_SCRIPT GLOBAL PROPERTY SOF_REMOTE_CONSOLE_SCRIPT )
GET_PROPERTY( CONSOLE_SCRIPT_NO_NS GLOBAL PROPERTY SOF_REMOTE_CONSOLE_NO_NS_SCRIPT )

LINK_DIRECTORIES( ${CMAKE_BINARY_DIR}/remote/impl ${MICO_LIBRARY_PATH} )

ADD_EXECUTABLE( sof_remote_console ${SOURCES} )

TARGET_LINK_LIBRARIES( sof_remote_console sof_remote ${MICO_ORB_LIB} ${MICO_COSS_LIB} ${MICO_PTHREAD_LIB} )

INSTALL( FILES ${CMAKE_SOURCE_DIR}/remote/console/bin/${CONSOLE_SCRIPT} DESTINATION ${CMAKE_BINARY_DIR}/remote/console )
INSTALL( FILES ${CMAKE_SOURCE_DIR}/remote/console/bin/${CONSOLE_SCRIPT_NO_NS} DESTINATION ${CMAKE_BINARY_DIR}/remote/console )
