PROJECT (SOF_REMOTE_REGISTRY)

SET (SOURCES 
	src/registry.cpp
	)
   
GET_PROPERTY( MICO_INCLUDE_DIR GLOBAL PROPERTY MICO_INCLUDE )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/impl/src ${CMAKE_SOURCE_DIR}/remote/impl/src ${MICO_INCLUDE_DIR} )

GET_PROPERTY( MICO_LIBRARY_PATH GLOBAL PROPERTY MICO_LIBS )
GET_PROPERTY( MICO_ORB_LIB GLOBAL PROPERTY MICO_ORB )
GET_PROPERTY( MICO_COSS_LIB GLOBAL PROPERTY MICO_COSS )
GET_PROPERTY( MICO_PTHREAD_LIB GLOBAL PROPERTY MICO_PTHREAD )

GET_PROPERTY( NAMING_SERVICE_SCRIPT GLOBAL PROPERTY SOF_NAMING_SERVICE_SCRIPT )
GET_PROPERTY( NAMING_SERVICE_ADMIN_SCRIPT GLOBAL PROPERTY SOF_NAMING_SERVICE_ADMIN_SCRIPT )
GET_PROPERTY( REGISTRY_SCRIPT GLOBAL PROPERTY SOF_REGISTRY_SCRIPT )
GET_PROPERTY( REGISTRY_NO_NS_SCRIPT GLOBAL PROPERTY SOF_REGISTRY_NO_NS_SCRIPT )
    
LINK_DIRECTORIES( ${CMAKE_BINARY_DIR}/remote/impl ${MICO_LIBRARY_PATH} )

ADD_EXECUTABLE( registry ${SOURCES} )

TARGET_LINK_LIBRARIES( registry sof_remote ${MICO_ORB_LIB} ${MICO_COSS_LIB} ${MICO_PTHREAD_LIB} ) 

INSTALL( FILES ${CMAKE_SOURCE_DIR}/remote/registry/bin/${NAMING_SERVICE_SCRIPT} DESTINATION ${CMAKE_BINARY_DIR}/remote/registry )
INSTALL( FILES ${CMAKE_SOURCE_DIR}/remote/registry/bin/${NAMING_SERVICE_ADMIN_SCRIPT} DESTINATION ${CMAKE_BINARY_DIR}/remote/registry )
INSTALL( FILES ${CMAKE_SOURCE_DIR}/remote/registry/bin/${REGISTRY_SCRIPT} DESTINATION ${CMAKE_BINARY_DIR}/remote/registry )
INSTALL( FILES ${CMAKE_SOURCE_DIR}/remote/registry/bin/${REGISTRY_NO_NS_SCRIPT} DESTINATION ${CMAKE_BINARY_DIR}/remote/registry )


